Dev ci GitHub actions (#40)